--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=News+Cycle&display=swap');
 
-body {
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
   font-family: 'News Cycle', sans-serif;
   font-size: 62.5%;
+  line-height: 1.5;
+  overflow-x: hidden;
 }
