--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,34 @@ html {
   line-height: 1.5;
   overflow-x: hidden;
 }
+
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
+.panelContainer {
+  width: 100%;
+  height: 100%;
+
+  padding: 10rem;
+
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+}
+
+.panelContainer .panel {
+  width: 100%;
+  height: 100%;
+
+  border-radius: 5rem;
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.panelContainer .panel--active {
+  flex-basis: 1000%;
+}
