--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=News+Cycle&display=swap');
 
+/* --- Universal --- */
+
 *,
 *:before,
 *:after {
@@ -9,20 +11,26 @@
 }
 
 html {
-  font-family: 'News Cycle', sans-serif;
   font-size: 62.5%;
   line-height: 1.5;
   overflow-x: hidden;
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  font-family: 'News Cycle', sans-serif !important;
 }
 
+/* --- utilityClasses --- */
+
+.hidden {
+  display: none;
+}
+
+/* --- Viewport --- */
+
 .panelContainer {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   padding: 10rem;
 
@@ -43,5 +51,14 @@ body {
 }
 
 .panelContainer .panel--active {
-  flex-basis: 1000%;
+  flex-basis: 1250%;
+  transition: 1s;
+}
+
+/* --- Mobil --- */
+
+@media (max-width: 960px) {
+  .panelContainer {
+    flex-direction: column;
+  }
 }
