--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,8 @@ html {
 }
 
 body {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  /* overflow: auto; */
 
   font-family: 'News Cycle', sans-serif !important;
   line-height: 1.5;
